# led-matrix-controller

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  emulator_config.json  pyproject.toml  requirements.txt
.github/workflows/: codspeed.yml
dev_tools/home_assistant/: generate_mqtt_entities.py
led_matrix_controller/: __init__.py  audio_processor.py  main.py  rain.py
led_matrix_controller/cellular_automata/: __init__.py  automaton.py  rule.py  setting.py
led_matrix_controller/content/: __init__.py  audio_visualiser.py  automaton.py  base.py  clock.py  combination.py  dynamic_content.py  now_playing.py  raining_grid.py  setting.py  snake.py  sorting_algorithms.py
led_matrix_controller/content/gif/: viewer.py
led_matrix_controller/content/image/: __init__.py  viewer.py
led_matrix_controller/models/: __init__.py  _rgbmatrix.py  artwork_image.py  automaton.py  led_matrix_options.py  matrix.py  rule.py  setting.py  text_label.py
led_matrix_controller/models/content/: __init__.py  base.py  raining_grid.py
led_matrix_controller/models/content/gif/: __init__.py  viewer.py
led_matrix_controller/models/content/image/: viewer.py
led_matrix_controller/utils/: __init__.py  _rgbmatrix.py  const.py  helpers.py  mqtt.py  profiling.py
led_matrix_controller/utils/cellular_automata/: __init__.py  automaton.py  ca.py  grid.py  raining_grid.py  rule.py  setting.py
led_matrix_controller/utils/image/: viewer.py
service/: audio_processor.service  led_matrix_controller.service
tests/: conftest.py
tests/benchmark/: test__ca.py
